# glacier-depth-SIA-model

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  start.sh
workspace/: implementation_plan.md
workspace/glacier_app/: Dockerfile  README.md  app.py  config.example.yaml  glacier_cli.py  pyproject.toml  requirements.txt
workspace/glacier_app/glacier_analysis/: __init__.py  api_models.py  cli.py  cli_runner.py  config.py  elevation.py  geometry.py  processing.py  report.py
workspace/glacier_app/static/: app.js  style.css
workspace/glacier_app/templates/: index.html
workspace/glacier_app/tests/: test_api_run_full.py  test_config_parsing.py  test_pipeline_run_full.py  test_report_zip.py  test_slope_depth_stability.py  test_synthetic_dem.py
